Add lots of docs, Fix path extrapolating bugs
Documented the methods a lot.

Fixed the two bugs in path extraction:
* The direction of extrapolated two-degree node paths were previously
sometimes reversed
* When we had multi-edge compressed graphs, we could select the wrong
path